--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ black==20.8b1
 certifi==2020.12.5
 cfgv==3.2.0
 click==7.1.2
+coverage==5.5
 distlib==0.3.1
 dnspython==2.1.0
 dominate==2.6.0
@@ -32,11 +33,13 @@ python-dotenv==0.17.0
 python-editor==1.0.4
 PyYAML==5.4.1
 regex==2021.4.4
+selenium==3.141.0
 six==1.15.0
 SQLAlchemy==1.4.7
 toml==0.10.2
 typed-ast==1.4.2
 typing-extensions==3.7.4.3
+urllib3==1.26.4
 virtualenv==20.4.3
 visitor==0.1.3
 Werkzeug==1.0.1
