--- a/environment.yml
+++ b/environment.yml
@@ -4,8 +4,13 @@ channels:
 dependencies:
   - ca-certificates=2021.4.13=hecd8cb5_1
   - certifi=2020.12.5=py39hecd8cb5_0
+  - click=7.1.2=pyhd3eb1b0_0
+  - flask=1.1.2=pyhd3eb1b0_0
+  - itsdangerous=1.1.0=pyhd3eb1b0_0
+  - jinja2=2.11.3=pyhd3eb1b0_0
   - libcxx=10.0.0=1
   - libffi=3.3=hb1e8313_2
+  - markupsafe=1.1.1=py39h9ed2024_0
   - ncurses=6.2=h0a44026_1
   - openssl=1.1.1k=h9ed2024_0
   - pip=21.0.1=py39hecd8cb5_0
@@ -15,6 +20,7 @@ dependencies:
   - sqlite=3.35.4=hce871da_0
   - tk=8.6.10=hb0a8c7a_0
   - tzdata=2020f=h52ac0ba_0
+  - werkzeug=1.0.1=pyhd3eb1b0_0
   - wheel=0.36.2=pyhd3eb1b0_0
   - xz=5.2.5=h1de35cc_0
   - zlib=1.2.11=h1de35cc_3
@@ -23,13 +29,12 @@ dependencies:
     - appdirs==1.4.4
     - black==20.8b1
     - cfgv==3.2.0
-    - click==7.1.2
+    - coverage==5.5
     - distlib==0.3.1
     - dnspython==2.1.0
     - dominate==2.6.0
     - email-validator==1.1.2
     - filelock==3.0.12
-    - flask==1.1.2
     - flask-bootstrap4==4.0.2
     - flask-login==0.5.0
     - flask-migrate==2.7.0
@@ -38,10 +43,7 @@ dependencies:
     - greenlet==1.0.0
     - identify==2.2.2
     - idna==3.1
-    - itsdangerous==1.1.0
-    - jinja2==2.11.3
     - mako==1.1.4
-    - markupsafe==1.1.1
     - mypy==0.812
     - mypy-extensions==0.4.3
     - nodeenv==1.5.0
@@ -52,12 +54,14 @@ dependencies:
     - python-editor==1.0.4
     - pyyaml==5.4.1
     - regex==2021.4.4
+    - selenium==3.141.0
     - six==1.15.0
     - sqlalchemy==1.4.7
     - toml==0.10.2
     - typed-ast==1.4.2
     - typing-extensions==3.7.4.3
+    - urllib3==1.26.4
     - virtualenv==20.4.3
     - visitor==0.1.3
-    - werkzeug==1.0.1
     - wtforms==2.3.3
+prefix: /Users/daniel/opt/miniconda3/envs/peaks-env
