--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,7 +12,7 @@ repos:
     -   id: end-of-file-fixer
     -   id: trailing-whitespace
 
-# -   repo: https://github.com/pre-commit/mirrors-mypy
-#     rev: ''
-#     hooks:
-#     -   id: mypy
+-   repo: https://github.com/pre-commit/mirrors-mypy
+    rev: ''
+    hooks:
+    -   id: mypy
